--- a/src/Layouts/Footer.astro
+++ b/src/Layouts/Footer.astro
@@ -1,5 +1,5 @@
 ---
-const sections: string[] = ["Home", "Cheatsheets", "Updates", "About"];
+const sections: string[] = ["Home", "Cheatsheets", "Progress", "About"];
 import { DiscordIcon, GithubIcon } from "../ReactComponent/icons/Social_Icons";
 ---
 
